# errorfix

./: .dockerignore  .env  Dockerfile  Makefile  QUICK_START.md  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py  solutions.db  test_system.py
.github/workflows/: ci.yml
src/: __init__.py  streamlit_app.py
src/ai/: __init__.py  error_classifier.py
src/api/: main.py  models.py
src/database/: init_db.py  knowledge_base.py  solution_history.py
src/ocr/: image_preprocessor.py  text_detector.py  text_extractor.py
src/search/: __init__.py  web_search.py
src/utils/: cache.py  clipboard_monitor.py  exporters.py  log_parser.py  logger.py
tests/: __init__.py  test_ocr.py
